[package]
name = "pgrange"
version = "0.1.0"
edition = "2024"
description = "pgrange support in Rust"

[lib]
doctest = false


[dependencies]
bytes = { version = "1", optional = true }
postgres-types = { version = "0.2", default-features = false, optional = true }
diesel = { version = "2", default-features = false, features = ["postgres"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["postgres"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

serde_json = { version = "1", default-features = false, optional = true, features = ["std"] }
chrono = { version = "0.4.27", default-features = false, optional = true, features = ["clock"] }
rust_decimal = { version = "1", default-features = false, optional = true }
bigdecimal = { version = "0.4", default-features = false, optional = true }
time = { version = "0.3.36", default-features = false, optional = true, features = ["macros", "formatting"] }

[dependencies.bitflags]
version = "2"
default-features = false

[dev-dependencies]
postgres = { version = "0.19", default-features = false }
diesel = { version = "2", default-features = false, features = ["32-column-tables"] }
sqlx = { version = "0", default-features = false, features = ["runtime-async-std-native-tls"] }
async-std = { version = "1", features = ["attributes"] }
serde_json = "1"

[features]
default = ["postgres", "sqlx", "with-chrono", "with-time", "with-rust_decimal", "with-bigdecimal"]
sqlx = ["dep:sqlx"]
postgres = ["dep:postgres-types", "dep:bytes"]
with-chrono = ["dep:chrono", "sqlx/chrono"]
with-json = ["dep:serde_json"]
with-rust_decimal = ["dep:rust_decimal", "sqlx/rust_decimal"]
with-bigdecimal = ["dep:bigdecimal", "sqlx/bigdecimal"]
with-time = ["time", "sqlx/time"]