[package]
name = "pgrange"
version = "0.1.0"
edition = "2024"
description = "postgres range support in Rust"

[lib]
doctest = false

[dependencies]
bitflags = { version = "2", default-features = false}
serde = { version = "1", features = ["derive", "serde_derive"]}
bytes = { version = "1", optional = true }
postgres-types = { version = "0.2", default-features = false, optional = true }
sqlx = { version = "0.8", default-features = false, features = ["postgres"], optional = true }
diesel = { version = "2", default-features = false, features = ["postgres"], optional = true }
chrono = { version = "0.4.27", default-features = false, optional = true, features = ["clock"] }
time = { version = "0.3.36", default-features = false, optional = true, features = ["macros", "formatting"] }
rust_decimal = { version = "1", default-features = false, optional = true }
bigdecimal = { version = "0.4", default-features = false, optional = true }


[dev-dependencies]
postgres = { version = "0.19", default-features = false }
diesel = { version = "2", default-features = false, features = ["32-column-tables"] }
sqlx = { version = "0", default-features = false, features = ["runtime-async-std-native-tls"] }
async-std = { version = "1", features = ["attributes"] }

[features]
default = ["postgres", "sqlx", "with-chrono", "with-rust_decimal"]
postgres = ["dep:postgres-types", "dep:bytes"]
sqlx = ["dep:sqlx"]
with-chrono = ["dep:chrono", "sqlx/chrono"]
with-bigdecimal = ["dep:bigdecimal", "sqlx/bigdecimal"]
with-rust_decimal = ["dep:rust_decimal", "sqlx/rust_decimal"]
with-time = ["time", "sqlx/time"]
